--- a/src/components/Slider/style.scss
+++ b/src/components/Slider/style.scss
@@ -1,12 +1,13 @@
 .Slider-wrapper {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   overflow: hidden;
-  position: relative;
+  position: relative; 
+}
 
-  img {
-    object-fit: cover;
-  }
+img {
+  width: 100vw;
+  object-fit: cover !important;
 }
 
 .slick-dots {
