--- a/src/application.scss
+++ b/src/application.scss
@@ -1,7 +1,9 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+@import url('https://fonts.googleapis.com/css?family=Sacramento');
 
 body {
+  font-family: 'Sacramento', cursive;
   margin: 0;
   padding: 0;
 }
