--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -1,9 +1,15 @@
+$base-color: #97D2FB;
+$primary-color: rgba($base-color, 0);
+$secondary-color: rgba($base-color, 0.3);
+$ternary-color: rgba($base-color, 0.5);
+$fourth-color: rgba($base-color, 0.8);
+
 .Loader {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  z-index: 9999;
-  background: #191920;
+  z-index: 5;
+  background: $base-color;
   top: 0px;
   left: 0px;
 
@@ -14,7 +20,7 @@
     background: rgba(white, 0.05);
     text-align: center;
     border: 1px solid white;
-    box-shadow: 0px 0px 21px 1px rgba(0, 0, 0, 0.3);
+    // box-shadow: 0px 0px 21px 1px rgba(0, 0, 0, 0.1);
     padding: .5em .3em .3em .3em;
     position: absolute;
     top: 50%; left: 50%;
@@ -35,30 +41,74 @@
 
   }
 }
+
 .message-exit {
   opacity: 1;
+  transform: scale(1);
 }
+
 
 .message-exit-active {
   opacity: 0;
-  transition: all 1s linear;
+  transform: scale(2);
+  transition: all .6s linear;
 }
 
 .message-exit-done {
+  transform: scale(1);
   opacity: 0;
+}
+
+.Background-Wrapper {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
+.Filter {
+  background: -moz-radial-gradient(center, ellipse cover, $primary-color 0%, $secondary-color 33%, $ternary-color 66%, $fourth-color 100%);
+  background: -webkit-radial-gradient(center, ellipse cover, $primary-color 0%, $secondary-color 33%, $ternary-color 66%, $fourth-color 100%);
+  background: radial-gradient(ellipse at center, $primary-color 0%, $secondary-color 33%, $ternary-color 66%, $fourth-color 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000', GradientType=1);
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+}
+
+.Song-button {
+  position: fixed;
+  top: 1rem;
+  left: 1rem;
+  z-index: 6;
+  padding: .7rem;
+  color: white;
+  font-size: .7rem;
+  background: rgba(white, 0.3);
+  border: none;
+  outline: none;
+  border-radius: 1rem;
+  cursor: pointer;
 }
 
 .Content {
   position: absolute;
   top: 50%; left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  z-index: 2;
+  z-index: 4;
   text-align: center;
 
   p {
     margin: 0;
     color: white;
     font-size: 5em;
+  }
+
+  .heart-Wrapper {
+    display: flex;
+    justify-content: center;
   }
 
   .heart {
