--- a/src/components/Slider/style.scss
+++ b/src/components/Slider/style.scss
@@ -2,37 +2,14 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  z-index: -1;
+  z-index: 3;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
 }
 
-.Slider-filter {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,0.45+33,0.73+66,1+100 */
-
-  background: -moz-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.45) 33%, rgba(0, 0, 0, 0.73) 66%, rgba(0, 0, 0, 1) 100%);
-  /* FF3.6-15 */
-
-  background: -webkit-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.45) 33%, rgba(0, 0, 0, 0.73) 66%, rgba(0, 0, 0, 1) 100%);
-  /* Chrome10-25,Safari5.1-6 */
-
-  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.45) 33%, rgba(0, 0, 0, 0.73) 66%, rgba(0, 0, 0, 1) 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000', GradientType=1);
-  /* IE6-9 fallback on horizontal gradient */
-
-
-  width: 100%;
+.Slider-image {
   height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-}
-
-img {
   width: 100vw;
   object-fit: cover !important;
 }
